tests/heuristics/snapshots/heuristics__width.snap
---
created: "2019-09-18T11:15:46.755038697Z"
creator: insta@0.8.1
source: tests/heuristics/mod.rs
expression: "(heuristic_value_width_territory(&field, 0),\n heuristic_value_width_territory(&field, 1))"
---
(
    0.05,
    0.04,
)
